Update QR code functionality and enhance agent display
- Added a new environment variable for public app URL to support QR code generation.
- Introduced achievementTitle to the agent data structure for improved display.
- Refactored QR code generation logic to utilize the new environment variable for base URL.
- Removed unused focus handling logic and optimized agent card rendering for better performance.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Copy this file to .env.local and fill in your Firebase values.
 # For Vercel: add these in Project Settings → Environment Variables.
 
+# Public URL for QR code on /screen (e.g. https://your-app.vercel.app). If unset, uses current origin.
+NEXT_PUBLIC_APP_URL=
+
 NEXT_PUBLIC_FIREBASE_API_KEY=
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=
